--- a/angular.json
+++ b/angular.json
@@ -51,7 +51,10 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": [
+              "src/styles.scss",
+              "./node_modules/raisincss/raisin.min.css"
+            ],
             "scripts": []
           },
           "configurations": {
