Add schematic for github pages

--- a/angular.json
+++ b/angular.json
@@ -50,7 +50,10 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
             "styles": [
               "src/styles.scss",
               "./node_modules/raisincss/raisin.min.css"
@@ -104,6 +107,10 @@
           "options": {
             "browserTarget": "angular-training:build"
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
