--- a/package.json
+++ b/package.json
@@ -32,8 +32,19 @@
     "@angular/compiler-cli": "~10.0.0",
     "@types/node": "^12.11.1",
     "angular-cli-ghpages": "^0.6.2",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
+    "prettier": "2.0.5",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,css,md}": "prettier --write"
   }
 }
